# mattshop

./: .gitignore  Dockerfile  Makefile  README.md  assignment.md  docker-compose.yml  fixture.json  manage.py  pyproject.toml
mattshop/: asgi.py  settings.py  urls.py  wsgi.py
mattshop/authentication/: apps.py  factories.py  urls.py
mattshop/authentication/management/commands/: create_user.py
mattshop/healthcheck/: apps.py  urls.py  views.py
mattshop/orders/: apps.py  exceptions.py  factories.py  models.py  operations.py  serializers.py  urls.py  views.py
mattshop/orders/migrations/: 0001_initial.py  0002_alter_orderitem_order.py
mattshop/products/: apps.py  factories.py  models.py  serializers.py  urls.py  views.py
mattshop/products/migrations/: 0001_initial.py  0002_alter_product_options.py
tests/: pytest.ini  test_authtoken.py
tests/authentication/: test_authtoken.py
tests/healthcheck/: test_heartbeat.py
tests/orders/: test_operations.py  test_views.py
tests/products/: test_models.py  test_views.py
