[tool.poetry]
name = "mattshop"
version = "0.1.0"
description = ""
authors = ["Matt Jackson <me@mattjackson.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
djangorestframework = "^3.15.1"
factory-boy = "^3.3.0"
pytest = "^8.1.1"
uwsgi = "^2.0.25.1"
psycopg2 = "^2.9.9"
pytest-django = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
